--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -112,7 +112,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tabSettings">
        <property name="styleSheet">
@@ -1104,6 +1104,19 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
                      </property>
                      <property name="text">
                       <string>Reset IMU</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QPushButton" name="pushButtonStartQualification">
+                     <property name="sizePolicy">
+                      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                       <horstretch>0</horstretch>
+                       <verstretch>0</verstretch>
+                      </sizepolicy>
+                     </property>
+                     <property name="text">
+                      <string>Start qualification</string>
                      </property>
                     </widget>
                    </item>
